# resonance-weaver-tauri

./: README.md  bubble.html  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-04-19-resonance-weaver-standalone.md
docs/superpowers/specs/: 2026-04-19-resonance-weaver-standalone-design.md
src/: App.vue  BubbleApp.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs
src-tauri/src/services/: clipboard.rs  db.rs  funnel.rs  indexer.rs  mod.rs  vector_store.rs
src/components/: ConfigPanel.vue  IconButton.vue  ResonanceBubble.vue  TriageList.vue
