[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["full"] }
lancedb = "0.27.2"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
rusqlite = "0.39.0"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json"] }
notify = "8.2.0"
arboard = "3.6.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2"
log = "0.4"
futures = "0.3"
urlencoding = "2"
open = "5"
tauri-plugin-dialog = "2.7.0"
regex = "1.12.3"
